# mcp-dochub-server

./: .gitignore  =3.1.0  K8S_COMMANDS.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
ai_admin/: __init__.py  __main__.py  server.py  version.py
ai_admin/commands/: __init__.py  base.py  docker_build_command.py  docker_images_command.py  docker_push_command.py  docker_remove_command.py  docker_tag_command.py  example_command.py  git_clone_command.py  git_commit_command.py  github_create_repo_command.py  k8s_configmap_command.py  k8s_deployment_create_command.py  k8s_logs_command.py  k8s_namespace_command.py  k8s_pod_create_command.py  k8s_pod_delete_command.py  k8s_pod_status_command.py  k8s_service_create_command.py  llm_inference_command.py  ollama_base.py  ollama_memory_command.py  ollama_models_command.py  ollama_run_command.py  ollama_status_command.py  queue_cancel_command.py  queue_push_command.py  queue_status_command.py  queue_task_status_command.py  system_monitor_command.py  vast_destroy_command.py  vast_search_command.py
ai_admin/queue/: __init__.py  queue_manager.py  task_queue.py
docker/: Dockerfile  build.sh  docker-compose.yml  run-ai-admin.sh  run.sh  setup-env.sh
examples/: basic_usage.py
mcp_empty_server/: __init__.py  server.py  version.py
mcp_empty_server/commands/: __init__.py  docker_images_command.py  docker_login_command.py  docker_push_command.py  docker_remove_command.py  docker_tag_command.py  git_init_command.py  git_push_command.py  git_status_command.py  github_list_repos_command.py  queue_cancel_command.py  queue_push_command.py  queue_status_command.py  queue_task_status_command.py  registry.py  vast_create_command.py  vast_instances_command.py
mcp_empty_server/queue/: __init__.py  queue_manager.py  task_queue.py
