[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-empty-server"
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Empty server with command autodiscovery support using mcp_proxy_adapter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp-proxy-adapter>=1.0.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.95.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-empty-server = "mcp_empty_server.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/mcp-empty-server"
Documentation = "https://github.com/yourusername/mcp-empty-server#readme"
Repository = "https://github.com/yourusername/mcp-empty-server.git"
Issues = "https://github.com/yourusername/mcp-empty-server/issues"

[tool.setuptools.dynamic]
version = {attr = "mcp_empty_server.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_empty_server*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 